web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: proxy
    role: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proxy
      role: webserver
  template:
    metadata:
      labels:
        app: proxy
        role: webserver
    spec:
      containers:
      - name: web-01
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
