web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: proxy
    role: webserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
